--- a/requirements.txt
+++ b/requirements.txt
@@ -53,6 +53,7 @@ protobuf==5.29.3
 psutil==6.1.1
 pyarrow==18.1.0
 PyAutoGUI==0.9.54
+psycopg2-binary==2.9.10
 pydantic==2.8.2
 pydantic_core==2.20.1
 pydeck==0.9.1
@@ -77,6 +78,7 @@ smmap==5.0.2
 sniffio==1.3.1
 soupsieve==2.4.1
 SpeechRecognition==3.10.4
+SQLAlchemy==2.0.37
 streamlit==1.41.1
 streamlit-aggrid==1.0.5
 ta==0.11.0
